# MethodsOfComputationalMathematics

./: CMakeLists.txt  README.md
lib/googletest-1.14.0/docs/: advanced.md  primer.md
lib/googletest-1.14.0/googletest/include/gtest/: gtest-printers.h
lib/googletest-1.14.0/googletest/include/gtest/internal/: gtest-internal.h
lib/googletest-1.14.0/googletest/src/: gtest-printers.cc
src/: CMakeLists.txt  Double.cpp  Double.h  Eigenvalues.h  FunctionApproximation.h  Matrix.h  Polynomial.h  Rational.cpp  Rational.h  SolveNonlinearEquation.h  SolveSystem.h  main.cpp
test/: CMakeLists.txt  DoubleTest.cpp  MatrixTest.cpp  PolynomialTest.cpp  SolveSystemTest.cpp
